# aoc-2021

./: Cargo.toml
day1/: Cargo.toml
day1/src/: main.rs
day10/src/: main.rs
day11/: Cargo.toml
day11/src/: main.rs
day13/src/: main.rs
day14/src/: main.rs  part1.rs
day15/: Cargo.toml
day15/src/: main.rs  naive_finder.rs
day16/src/: main.rs
day17/: Cargo.toml
day17/src/: input.txt  main.rs
day2/: Cargo.toml
day2/src/: main.rs
day22/: Cargo.toml
day22/src/: main.rs
day23/: Cargo.toml
day23/src/: main.rs
day24/: Cargo.toml
day24/src/: dynamic.rs  input.txt  main.rs
day24_macro/: Cargo.toml
day24_macro/src/: asm.rs  lib.rs
day24_macro/tests/: alu_program.rs  test.txt  test2.txt
day24_shared/: Cargo.toml
day24_shared/src/: lib.rs
day25/src/: main.rs
day3/: Cargo.toml
day3/src/: main.rs
day4/: Cargo.toml
day4/src/: main.rs  structs.rs
day5/: Cargo.toml
day5/src/: input.txt  main.rs  structs.rs
day6/: Cargo.toml
day6/src/: main.rs
day7/: Cargo.toml
day7/src/: bonus.rs  main.rs
day8/: Cargo.toml
day8/src/: finder.rs  main.rs
day9/src/: main.rs
