[package]
name = "day24"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
strum = { version = "0.23", features = ["derive"] }
day24_shared = {path = "../day24_shared"}
day24_macro = {path = "../day24_macro"}
itertools = "0.10"